--- a/Css/end.css
+++ b/Css/end.css
@@ -57,3 +57,43 @@ button:hover {
   color: #e1acac;
   border: #7bc9ff;
 }
+.robot {
+  display: flex;
+}
+
+.angry,
+.happy {
+  width: 50px;
+  height: 50px;
+  position: relative;
+  top: -435px;
+  left: -160px;
+  display: none;
+}
+.happy2 {
+  display: block;
+  animation: validation 2.5s ease-in-out;
+  animation-iteration-count: 1;
+
+  animation-fill-mode: forwards;
+}
+.angry2 {
+  display: block;
+  animation: validation 2.5s ease-in-out;
+
+  animation-iteration-count: 1;
+
+  animation-fill-mode: forwards;
+}
+
+@keyframes validation {
+  0% {
+    transform: translateY(0) translateX(0);
+  }
+  50% {
+    transform: translateY(-80px) translateX(0);
+  }
+  100% {
+    transform: translateY(-80px) translateX(-150px);
+  }
+}
