--- a/Css/end.css
+++ b/Css/end.css
@@ -61,7 +61,6 @@ button:hover {
   display: flex;
 }
 
-.angry,
 .happy {
   width: 50px;
   height: 50px;
@@ -77,14 +76,6 @@ button:hover {
 
   animation-fill-mode: forwards;
 }
-.angry2 {
-  display: block;
-  animation: validation 2.5s ease-in-out;
-
-  animation-iteration-count: 1;
-
-  animation-fill-mode: forwards;
-}
 
 @keyframes validation {
   0% {
@@ -95,5 +86,54 @@ button:hover {
   }
   100% {
     transform: translateY(-80px) translateX(-150px);
+  }
+}
+.hand {
+  width: 50px;
+  position: relative;
+  top: -350px;
+  left: +200px;
+  display: none;
+}
+.hand2 {
+  display: block;
+  animation: showhand 1s ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes showhand {
+  0% {
+    transform: translateY(0) translateX(0);
+  }
+
+  100% {
+    transform: translateY(-20px) translateX(-20px);
+  }
+}
+#typing-text {
+  overflow: hidden;
+  border-right: 0.15rem solid black;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.15rem;
+  animation: typing 3.5s step(40, end), blink-caret 0.75s step-end infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
   }
 }
