--- a/Css/difficulty.css
+++ b/Css/difficulty.css
@@ -1,30 +1,56 @@
+@import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
+
+h1 {
+  color: #7469b6;
+  font-size: 120px;
+  font-family: "Jersey 10", sans-serif;
+  margin-top: 60px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
-a {
+button {
   background-color: #e1acac;
   border-radius: 50px;
+  border: none;
   padding: 30px 100px;
   text-align: center;
   color: #7469b6;
-  text-decoration: none;
   cursor: pointer;
   font-size: 30px;
-  font-weight: bolder;
+
   transition: all 0.2s ease-in;
 }
 
-a:hover {
+button:hover {
   background-color: #7bc9ff;
   color: #e1acac;
 }
 img {
   width: 150px;
-  /* margin-top: 50px; */
+  margin-bottom: 20px;
   align-items: center;
   margin-left: 80px;
+}
+a {
+  background-color: #e1acac;
+  border-radius: 50px;
+  padding: 10px 50px;
+  text-align: center;
+  color: #7469b6;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: bolder;
+  transition: all 0.2s ease-in;
+  margin-top: 30px;
+}
+a:hover {
+  background-color: #7bc9ff;
+  color: #e1acac;
 }
