--- a/Css/index.css
+++ b/Css/index.css
@@ -22,8 +22,8 @@ a {
   text-decoration: none;
   cursor: pointer;
   font-size: 30px;
-  font-weight: bolder;
   transition: all 0.2s ease-in;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 a:hover {
